loading error in gallery on mobile device (mem issue?)

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -265,3 +265,13 @@ transition: opacity 0.5s ease-in-out;
 .lazy-image-loaded.loaded {
   opacity: 1;
 }
+
+
+  .lozad {
+    opacity: 0;
+    transition: opacity 1s;
+  }
+
+  .lozad.fade {
+    opacity: 1;
+  }
